--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,49 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<% if current_user %>
+  <h3>Welcome: <%= current_user.email %></h3>
+<% else %>
+  <div class="jumbotron">
+    <h2>Welcome to the Project Management Application!</h2>
+    <p class="lead">
+      You will love managing your projects with our application. Please take a look at our great plans!
+    </p>
+  </div>
+
+  <div class="container">
+    <div class="plans row justify-content-center", style="gap: 1rem">
+      <div class="plan border border-dark rounded h-10", style="height: 15rem; width: 15rem">
+        <h2>Free Plan</h2>
+        <div class="price mb-2">
+          <strong>Price: Free</strong>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Unlimited File Uploads</li>
+            <li>Responsive design</li>
+            <li>Access anywhere</li>
+            <li>1 Project</li>
+          </ul>
+        </div>
+        <p>
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary sign-up' %>
+        </p>
+      </div>
+      <div class="plan border border-dark rounded h-10", style="height: 15rem; width: 15rem">
+        <h2>Premium Plan</h2>
+        <div class="price mb-2">
+          <strong>Price: $10</strong>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Unlimited File Uploads</li>
+            <li>Responsive design</li>
+            <li>Access anywhere</li>
+            <li>Unlimited Projects</li>
+          </ul>
+        </div>
+        <p>
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary sign-up' %>
+        </p>
+      </div>
+    </div>
+  </div>
+<% end %>
