--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,15 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/navigation" %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <%= render "layouts/messages" %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
