--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,3 +53,16 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+.no-side-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+// .no-left-padding {
+//   padding-left: 0 !important;
+// }
+
+// .no-right-padding {
+//   padding-right: 0 !important;
+// }
