Update homepage to render plan descriptions correctly and add accidentally deleted options_for_select method to Plans model back.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,8 +18,8 @@
           </div>
           <div class="features">
             <ul>
-              <% plan.description.split(',').each do |feature| %>
-                <li><%= feature.strip %></li>
+              <% plan.plan_descriptions.each do |description| %>
+                <li><%= description.content.strip.capitalize %></li>
               <% end %>
             </ul>
           </div>
