--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,7 +51,7 @@
   <% end %>
 
   <div class="actions mt-3">
-    <%= f.submit "Sign up", class: 'btn btn-primary' %>
+    <%= f.submit "Sign up", class: 'btn btn-outline-success' %>
   </div>
 <% end %>
 
