--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,5 @@
 <% content_for :title, "New project" %>
 
-<h1>New project</h1>
+<h3 class="mt-3 mx-auto">Create New Project</h3>
 
 <%= render "form", project: @project %>
-
-<br>
-
-<div>
-  <%= link_to "Back to projects", projects_path %>
-</div>
