--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing project" %>
 
-<h1>Editing project</h1>
+<h3 class="mt-3 mx-auto">Editing Project</h3>
 
 <%= render "form", project: @project %>
 
@@ -8,5 +8,4 @@
 
 <div>
   <%= link_to "Show this project", @project %> |
-  <%= link_to "Back to projects", projects_path %>
 </div>
