--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,10 +8,10 @@
     <% if user_signed_in? %>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item active">
-          <%= link_to("Link_1", class: "nav-link") %>
+          <%= link_to("Projects", projects_path, class: "nav-link") %>
         </li>
         <li class="nav-item">
-          <%= link_to("Link_2", class: "nav-link") %>
+          <%= link_to("Create Project", new_project_path, class: "nav-link") %>
         </li>
       </ul>
     <% end %>
