Correct bugs in models. Create and style projects index and show pages with their corresponding partial files. Add devise_invitable gem for inviting employees to register. Add invitations controller and corresponding views.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <%= link_to("Create Project", new_project_path, class: "nav-link") %>
         </li>
+        <li class="nav-item">
+        <%= link_to("Invite Employee", new_user_invitation_path, class: "nav-link") %>
+      </li>
       </ul>
     <% end %>
 
