--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,28 @@
+<!--
 <p style="color: green"><%= notice %></p>
+-->
 
-<%= render @project %>
+<div class="container">
+  <h1 class="text-end"><%= current_user.organization.name %></h1>
+</div>
 
-<div>
-  <%= link_to "Edit this project", edit_project_path(@project) %> |
-  <%= link_to "Back to projects", projects_path %>
+<div class="mt-3">
+  <%= render @project %>
+</div>
 
-  <%= button_to "Destroy this project", @project, method: :delete %>
+<div class="mb-2">
+  <%= link_to("Edit", edit_project_path(@project), class: "mt-1 btn btn-outline-warning") %>
+
+  <% if current_user.admin? %>
+  <% if @project.completed? %>
+    <%= link_to("Reopen", reopen_project_path(@project), class: "mt-1 btn btn-outline-success", data: { turbo_method: :patch, confirm: "Are you sure?" }) %>
+  <% else %>
+    <%= link_to("Complete", complete_and_archive_project_path(@project), class: "mt-1 btn btn-outline-success", data: { turbo_method: :patch, confirm: "Are you sure?" }) %>
+  <% end %>
+    <%= link_to("Delete", project_path(@project), class: "mt-1 btn btn-outline-danger", data: { turbo_method: :delete, confirm: "Are you sure?" }) %>
+  <% end %>
+</div>
+
+<div class="mb-4">
+  <%= link_to("Back to Projects", projects_path, class: "mt-1 btn btn-outline-primary") %>
 </div>
