--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,11 +11,14 @@
           <%= link_to("Projects", projects_path, class: "nav-link") %>
         </li>
         <li class="nav-item">
-          <%= link_to("Create Project", new_project_path, class: "nav-link") %>
+          <%= link_to("New Project", new_project_path, class: "nav-link") %>
         </li>
         <li class="nav-item">
-        <%= link_to("Invite Employee", new_user_invitation_path, class: "nav-link") %>
-      </li>
+          <%= link_to("Invite Employee", new_user_invitation_path, class: "nav-link") %>
+        </li>
+        <li class="nav-item">
+          <%= link_to("All Employees", users_path, class: "nav-link") %>
+        </li>
       </ul>
     <% end %>
 
