Update artifacts controller to create new artifacts for the projects. Update projects controller to render artifacts in show action. Update artifacts and projects model to have polymorphic relationship. Update routes.rb file and views accordingly.

--- a/app/views/artifacts/edit.html.erb
+++ b/app/views/artifacts/edit.html.erb
@@ -8,5 +8,5 @@
 
 <div>
   <%= link_to "Show this artifact", @artifact %> |
-  <%= link_to "Back to artifacts", artifacts_path %>
+  <%= link_to "Back to artifacts", project_artifacts_path %>
 </div>
