--- a/app/views/artifacts/_form.html.erb
+++ b/app/views/artifacts/_form.html.erb
@@ -1,19 +1,21 @@
-<%= form_for @artifact, html: {multipart: true, class: "form-horizontal" } do |form| %>
-  <% if @artifact.errors.any? %>
-    <div id="error_expl" class="panel panel-danger">
-      <div class="panel-heading">
-        <h3 class="panel-title text-danger"><%= pluralize(@artifact.errors.count, "error") %> prohibited this file from being saved:</h3>
-      </div>
+<%= form_for [@project, Artifact.new], url: artifacts_path(@project), html: { multipart: true, class: "form-horizontal" } do |form| %>
 
-      <div class="panel-body">
-        <ul>
-          <% @artifact.errors.full_messages.each do |msg| %>
-            <li class="text-danger"><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-  <% end %>
+<%# if @artifact.errors.any? %>
+  <%# <div id="error_expl" class="panel panel-danger"> %>
+    <%# <div class="panel-heading"> %>
+      <%# <h3 class="panel-title text-danger"><%= pluralize(@artifact.errors.count, "error") %>
+      <%# prohibited this file from being saved:</h3> %>
+    <%# </div> %>
+
+    <%# <div class="panel-body"> %>
+      <%# <ul> %>
+        <%# @artifact.errors.full_messages.each do |msg| %>
+          <%# <li class="text-danger"><%= msg %></li> 
+        <%# end %> 
+      <%# </ul> %>
+    <%# </div> %>
+  <%# </div> %>
+<%# end %>
 
   <div class="control-group">
     <%= form.label :name, class: "control-label" %>
@@ -25,13 +27,13 @@
   <div class="control-group">
     <%= form.label :file, class: "control-label" %>
     <div class="controls">
-      <%= form.file_field :file, required: true, accept: 'image/jpeg,image/gif,image/png' %>
+      <%= form.file_field :file, required: true %>
     </div>
   </div>
   
   <%= form.submit nil, class: "btn btn-primary" %>
   
-  <%= link_to t(".cancel", default: t("helpers.links.cancel")), artifacts_path, class: "btn btn-default" %>
+  <%= link_to t(".cancel", default: t("helpers.links.cancel")), project_path(@project), class: "btn btn-default" %>
 <% end %>
 
 
