--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -7,5 +7,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to artifacts", artifacts_path %>
+  <%= link_to "Back to artifacts", project_artifacts_path %>
 </div>
