--- a/app/views/artifacts/_form.html.erb
+++ b/app/views/artifacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@project, Artifact.new], url: artifacts_path(@project), html: { multipart: true, class: "form-horizontal" } do |form| %>
+<%= form_for [@project, Artifact.new], url: project_artifacts_path(@project), html: { multipart: true, class: "form-horizontal" } do |form| %>
 
 <%# if @artifact.errors.any? %>
   <%# <div id="error_expl" class="panel panel-danger"> %>
