--- a/app/views/artifacts/show.html.erb
+++ b/app/views/artifacts/show.html.erb
@@ -1,3 +1,8 @@
+<%- model_class = Artifact -%>
+
+<div class="page-header">
+  <h1><%=t ".title", default: model_class.model_name.human.titleize %></h1>
+</div>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
@@ -6,6 +11,10 @@
   <dd><%= artifact_tag(@artifact.file.url) if @artifact.file? %></dd>
 </dl>
 
+<%= link_to("Back", project_artifacts_path, class: "btn btn-dark") %>
+
 <%= link_to("Edit", edit_artifact_path(@artifact), class: "btn btn-warning") %>
 
 <%= link_to("Delete", artifact_path(@artifact), class: "btn btn-danger", data: { turbo_method: :delete, confirm: "Are you sure?" }) %>
+
+<%= link_to("All Artifacts", project_artifacts_path, class: "btn btn-info") %>
