Implement changing plan functionality. Implement show action/view to display organization details. Update routes and navigation links accordingly.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,1 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
-
-
-<table class="table table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col" class=" align-middle text-center">#</th>
-      <th scope="col" class="col-2 align-middle">Name</th>
-      <th scope="col" class="col-3 align-middle">Surname</th>
-      <th scope="col" class="col-4 align-middle text-center">Email</th>
-      <th scope="col" class="col-2 align-middle text-center">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each_with_index do |user, i| %>
-      <tr>
-        <th scope="row"><%= i + 1 %></th>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        
-        <td class="row">
-          <% if current_user.admin? %>
-            <%= link_to(user.admin ? "Revoke Admin" : "Grant Admin", toggle_user_status_user_path(user), class: "mt-1 btn btn-outline-primary", data: { turbo_method: :patch, confirm: "Are you sure?" }) %>
-            <%= link_to("Delete User", user_path(user), class: "mt-1 btn btn-outline-danger", data: { turbo_method: :delete, confirm: "Are you sure?" }) %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render "list", users: @users %>
