--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,10 @@
           <%= link_to("Invite Employee", new_user_invitation_path, class: "nav-link") %>
         </li>
         <li class="nav-item">
-          <%= link_to("All Employees", users_path, class: "nav-link") %>
+          <%= link_to("Organization Details", organization_path(current_user.organization), class: "nav-link") %>
+        </li>
+        <li class="nav-item">
+          <%= link_to("Plans", plans_path, class: "nav-link") %>
         </li>
       </ul>
     <% end %>
