Add role changing functionality for permitted users. Add functionality to give/remove to/from users additional, custom permissions. Update registrations controller to assign new user organization admin role instead of admin: true value. Update views accordingly.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,15 +59,11 @@
   padding-right: 0;
 }
 
-// .no-left-padding {
-//   padding-left: 0 !important;
-// }
-
-// .no-right-padding {
-//   padding-right: 0 !important;
-// }
-
 .text-area-height {
   height: 8rem;
   resize: none;
+}
+
+.hidden {
+  display: none;
 }
