--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -15,28 +15,30 @@
     </div>
   </div>
 
-  <div class="row">
-    <% resource.class.invite_key_fields.each do |field| -%>
-      <div class="form-group mt-3 col-md-6">
-        <%= f.label field %><br />
-        <%= f.text_field field, autocomplete: "email", class: 'form-control' %>
-      </div>
-    <% end -%>
-
-    <div class="form-group mt-3 col-md-6">
-      <%= f.label :admin, "Admin", class: "form-label" %><br />
-      <div class="form-check form-check-inline">
-        <%= f.radio_button :admin, true, class: 'form-check-input', id: 'admin_true' %>
-        <%= f.label :admin, "True", value: "true", class: 'form-check-label mr-3', for: 'admin_true' %>
-      </div>
-      <div class="form-check form-check-inline">
-        <%= f.radio_button :admin, false, checked: true, class: 'form-check-input', id: 'admin_false' %>
-        <%= f.label :admin, "False", value: "false", class: 'form-check-label', for: 'admin_false' %>
-      </div>
+  <% resource.class.invite_key_fields.each do |field| %>
+    <div class="form-group mt-3">
+      <%= f.label field %><br />
+      <%= f.text_field field, autocomplete: "email", class: 'form-control' %>
     </div>
+  <% end %>
+
+  <div class="form-group mt-3">
+    <%= "Role" %><br />
+    <% @roles.each do |role| %>
+      <% if role.name.downcase != "super admin" %>
+        <div class="form-check form-check-inline">
+          <%= f.radio_button :role_id, role.id, class: 'form-check-input', id: "role_#{role.id}" %>
+          <%= f.label :role_id, role.name, class: 'form-check-label mr-3', for: "role_#{role.id}" %>
+        </div>
+      <% end %>
+    <% end %>
   </div>
-  
+
   <div class="actions mt-3">
     <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-outline-success' %>
   </div>
 <% end %>
+
+
+
+
